<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".login.LoginFragment">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:hint="@string/enter_name"
        android:textColorHighlight="#FFC107"
        app:met_errorColor="#FF9800"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/name"
        app:met_floatingLabelTextColor="#FF9800"
        app:met_maxCharacters="7"
        app:met_minCharacters="3"
        app:met_textColorHint="#FFC107"></com.rengwuxian.materialedittext.MaterialEditText>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHighlight="#FFC107"
        app:met_errorColor="#FF9800"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/password"
        app:met_floatingLabelTextColor="#FF9800"
        app:met_maxCharacters="15"
        app:met_minCharacters="8"
        app:met_textColorHint="#FFC107"
        android:drawableRight="@drawable/ic_invisible"
        ></com.rengwuxian.materialedittext.MaterialEditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:padding="@dimen/_4sdp">

        <CheckBox
            android:id="@+id/check_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:checked="false"
            android:clickable="true"
            android:text="@string/remember_me"></CheckBox>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"></TextView>
    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/background_edittext"
        android:text="@string/signUp"
        android:textAllCaps="false"></Button>

</LinearLayout>